Ajout du paragraphe

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <h1>Un Super titre!</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam delectus suscipit necessitatibus, optio dicta voluptate explicabo, dolore beatae sit consequuntur est corporis perferendis voluptatibus adipisci numquam accusamus cumque veniam corrupti!</p>
 </body>
 </html>
